Added Difficulty and styled

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <p>Don't let the timer run out!</p>
                 </div>
 
+                <!--Difficulty Change-->
+                <div class="center-content difficulty">
+                    <p>Difficulty: <span id="difficulty-changer">Easy</span></p>
+                </div>
+
                 <!--Seconds and Score-->
                 <div class="center-content user-score-timer">
                     <p class="inline-block timer-count">Seconds: <span id="timer-sec">0</span></p>
