Added End Game Modal

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
                 </div>
             </div>
 
+            <!--Game over Modal (By Bootstrap)-->
+            <div class="modal fade" id="game-over" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="center-content modal-body">
+                            <h1>Game Over!</h1>
+                            <br>
+                            <h3>You scored <span id="game-over-score"></span> on <span id="game-over-diff"></span> difficulty.</h3>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="game-content">
                 <!--Stie Content-->
                 <div class="game-info center-content">
