Placed timer on its own for User Experience and score below

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
                 </div>
 
                 <!--Seconds and Score-->
-                <div class="center-content user-score-timer">
+                <div class="center-content timer">
                     <p class="inline-block timer-count">Seconds: <span id="timer-sec">0</span></p>
-                    <p class="inline-block user-score">Score: <span id="score">0</span></p>
                 </div>
 
                 <!--Display Word to User-->
@@ -89,7 +88,7 @@
                 <!--Buttons for user to manage game-->
                 <div class="user-settings center-content">
                     <a id="start-game">Start</a>
-                    <a id="reset-game">Reset</a>
+                    <p class="inline-block user-score">Score: <span id="score">0</span></p>
                 </div>
             </div>
         </main>
