Game over modal set up for Leadboard

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="center-content modal-body">
-                            <h1>Game Over!</h1>
-                            <br>
-                            <h3>You scored <span id="game-over-score"></span> on <span id="game-over-diff"></span> difficulty.</h3>
+                            <div class="gameover-alert">
+                                <h1>Game Over!</h1>
+                                <br>
+                                <h3>You scored <span id="game-over-score"></span> on <span id="game-over-diff"></span> difficulty.</h3> 
+                            </div>
+
+                            <!--Local Storage Leadbaord-->
+                            <div class="local-leadboad">
+                                
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
