Added source got easytimer.js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+        <!--Easytimer.js-->
+        <script src="assets/easytimer.js/dist/easytimer.min.js"></script>
         <!--My JS-->
         <script src="assets/js/app.js"></script>
     </body>
