Changed dirs for better layout and deployment on heroku

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!--Easytimer.js-->
-        <script src="assets/easytimer.js/dist/easytimer.min.js"></script>
+        <script src="node_modules/easytimer.js/dist/easytimer.min.js"></script>
         <!--My JS-->
         <script src="assets/js/app.js"></script>
     </body>
