Changed script link for heroku test - Application still showing errors

--- a/index.html
+++ b/index.html
@@ -95,18 +95,7 @@
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!--Easytimer.js-->
-        <!--<script src="node_modules/easytimer.js/dist/easytimer.min.js"></script>-->
         <!--My JS-->
-        <script src="assets/js/bundle.js"></script>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
-
-<!--for (let i = 0; i < data.position.length; i++) {
-    var tableRow = `<tr>
-        <td>${data.position[i]}</td>
-        <td>${data.usernameinput[i]}</td>
-        <td>${data.score[i]}</td>
-    </tr>`;
-    $('.leaderboard > table').append(tableRow);        
-}-->
