--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!--My JS-->
-        <script src="assets/js/app.js"></script>
+        <script src="assets/js/bundle.js.js"></script>
     </body>
 </html>
