--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <!--Styles-->
     <link rel="stylesheet" href="assets/styles/main.css" type="text/css">
 
@@ -96,6 +96,6 @@
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!--My JS-->
-        <script src="assets/js/bundle.js.js"></script>
+        <script src="assets/js/bundle.js"></script>
     </body>
 </html>
