Added autocapitalize to HTML input to stop capitalisation of first letters on iOS and Andriod.

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                 </div>
 
                 <!--Input for user-->
-                <div class="user-input center-content">            
-                    <input type="text" id="user-input" placeholder="Type in here!">
+                <div class="user-input center-content">           
+                    <input type="text" id="user-input" autocapitalize="none" autocorrect="off" placeholder="Type in here!">
                 </div>
+
                 <!--Buttons for user to manage game-->
                 <div class="user-settings center-content">
                     <a id="start-game">Start</a>
