--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <!--Bootstrap JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!--Easytimer.js-->
+        <script src="assets/js/easytimer.js/dist/easytimer.min.js"></script>
         <!--My JS-->
         <script src="assets/js/bundle.js"></script>
     </body>
