--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                             <!--Local Storage Leadbaord-->
                             <div class="local-leaderboad">
                                 <div class="input-user">
-                                    <input type="text" name="username" id="username">
+                                    <input type="text" name="username" placeholder="Add a username!" id="username">
                                     <a id="add-user">Add!</a>
                                 </div>
                                 <div class="leaderboard">
+                                    <p>Leaderboard</p>
                                     <table>
                                         <tr>
                                             <th class="center-content" id="table-position">No.</th>
@@ -56,7 +57,7 @@
             </div>
 
             <div class="game-content">
-                <!--Stie Content-->
+                <!--Site Content-->
                 <div class="game-info center-content">
                     <h2>Type the word below as fast as you can!</h2>
                     <p>Don't let the timer run out!</p>
@@ -65,6 +66,7 @@
                 <!--Difficulty Change-->
                 <div class="center-content difficulty">
                     <p>Difficulty: <span id="difficulty-changer">Easy</span></p>
+                    <p class="changer-info">You can change the difficulty by clicking the above.</p>
                 </div>
 
                 <!--Seconds and Score-->
@@ -98,6 +100,6 @@
         <!--Easytimer.js-->
         <script src="assets/js/easytimer.js/dist/easytimer.min.js"></script>
         <!--My JS-->
-        <script src="assets/js/bundle.js"></script>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
