Changed class for better understand/targeting in CSS

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <!--Display Word to User-->
-                <div class="word-display center-content">
+                <div class="word-display-div center-content">
                     <span id="word-display">When start is clicked, the word will appear here.</span>
                 </div>
 
