Fixed issue with leaderboard showing multiple highscores

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                                 <h1>Game Over!</h1>
                                 <br>
                                 <h3>You scored <span id="game-over-score"></span> on <span id="game-over-diff"></span> difficulty.</h3> 
+                                <div id="score-alert">
+
+                                </div>
                             </div>
 
                             <!--Local Storage Leadbaord-->
@@ -43,6 +46,9 @@
                                             <th class="center-content" id="table-position">No.</th>
                                             <th class="center-content" id="table-username">Username</th>
                                             <th class="center-content" id="table-score">Score</th>
+                                        </tr>
+                                        <tr class="table-content">
+
                                         </tr>
                                     </table>
                                 </div>
