Added favicon images to wireframes/export and html link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!--Styles-->
     <link rel="stylesheet" href="assets/styles/main.css" type="text/css">
 
+    <link rel="icon" href="assets/wireframes/exports/Artboard – 1@2x.png" type="image/x-icon" />
+
     <title>Type Fast | Test your typing skills!</title>
 </head>
     <body>
